# resize-image-service

./: .gitignore  Dockerfile  README.md  pyproject.toml  run-queue.sh
.github/workflows/: docker-publish.yml  run-tests.yml
docker/: docker-compose.yml
resize_image_service/: __main__.py
resize_image_service/config/: config_redis.py  config_s3.py  config_server.py
resize_image_service/controller/: __init__.py  s3_controller.py
resize_image_service/depends/: depend_queue.py  depend_s3_service.py
resize_image_service/service/: amazon_s3_service.py  s3_service.py  storage_service.py
resize_image_service/utils/enums/: file_type.py
resize_image_service/utils/file_handler/: __init__.py
resize_image_service/worker/: s3_image_worker.py  storage_file_worker.py
storage_service/: __init__.py  __main__.py
storage_service/config/: config_allowed_origins.py  config_s3.py  config_server.py  config_virus_checker.py
storage_service/controller/: __init__.py  health_checker_controller.py  storage_controller.py
storage_service/depends/: depend_queue.py  depend_s3_service.py  depend_virus_checker_service.py
storage_service/model/storage/: new_file_request.py  process_file_request.py  signed_url_response.py
storage_service/service/: amazon_s3_service.py  storage_service.py
storage_service/service/storage/: __init__.py  amazon_s3_service.py  storage_service.py
storage_service/service/virus_checker/: virus_checker_none_service.py  virus_checker_service.py  virus_total_service.py
storage_service/utils/: file_name_hash.py
storage_service/worker/: storage_file_worker.py
tests/storage_service/: test_amazon_s3_service.py
tests/virus_checker_service/: test_virus_total_service.py
(+12 files in other folders)
