[tool.poetry]
name = "resize-image-service"
version = "0.1.0"
description = ""
authors = ["Vitor Hideyoshi <vitor.h.n.batista@gmail.com>"]
readme = "README.md"
packages = [{include = "storage_service"}]

[tool.poetry.dependencies]
python = "^3.12"
pillow = "^10.0.0"
redis = "^4.6.0"
requests = "^2.31.0"
rq = "^1.15.1"
python-dotenv = "^1.0.0"
fastapi = "^0.101.0"
uvicorn = "^0.23.2"
fastapi-utils = "^0.2.1"
boto3 = "^1.28.21"
python-multipart = "^0.0.6"
virustotal-python = "^1.0.2"


[tool.poetry.group.dev.dependencies]
isort = "^5.12.0"
black = "^23.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
line_length = 79
sections=[
    "FUTURE",
    "FIRSTPARTY",
    "LOCALFOLDER",
    "THIRDPARTY",
    "STDLIB",
]

